recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value n
  if(n==0){
     ^Tree:3: error: not found: value avancer
    avancer(length);
    ^Tree:4: error: not found: value reculer
    reculer(length);
    ^Tree:6: error: not found: value avancer
    avancer(length);
    ^